// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ServicesBlock /> renders properly 1`] = `
<div>
  <section
    class="jsx-1740087617 container"
    data-testid="servicesBlock_section"
  >
    <div
      class="jsx-1740087617 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Serviços
      </h1>
      <ul
        class="jsx-1740087617"
      >
        <li
          class="jsx-1740087617"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1740087617 fontL"
          >
            Design
          </p>
          <div
            class="jsx-1740087617 backface"
          >
            <p
              class="jsx-1740087617 fontXS"
            >
              - Web design
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Cartazes & flyers
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Cartão de contacto
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Templates para Social Media
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Menus
            </p>
          </div>
        </li>
        <li
          class="jsx-1740087617"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1740087617 fontL"
          >
            Social Media
          </p>
          <div
            class="jsx-1740087617 backface"
          >
            <p
              class="jsx-1740087617 fontXS"
            >
              - Criação de Conteúdo
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Análises de mercado
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Estratégia e gestão de redes sociais
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Promoção de posts
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Consultoria
            </p>
          </div>
        </li>
        <li
          class="jsx-1740087617"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1740087617 fontL"
          >
            Digital
          </p>
          <div
            class="jsx-1740087617 backface"
          >
            <p
              class="jsx-1740087617 fontXS"
            >
              - Campanhas paid search (google ads)
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Gestão de plataformas de opinião
            </p>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<ServicesBlock /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-1740087617 container"
    data-testid="servicesBlock_section"
  >
    <div
      class="jsx-1740087617 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Services
      </h1>
      <ul
        class="jsx-1740087617"
      >
        <li
          class="jsx-1740087617"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1740087617 fontL"
          >
            Design
          </p>
          <div
            class="jsx-1740087617 backface"
          >
            <p
              class="jsx-1740087617 fontXS"
            >
              - Web design
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Outdoors & flyers
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Contact card
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Social Media templates
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Menus
            </p>
          </div>
        </li>
        <li
          class="jsx-1740087617"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1740087617 fontL"
          >
            Social Media
          </p>
          <div
            class="jsx-1740087617 backface"
          >
            <p
              class="jsx-1740087617 fontXS"
            >
              - Content creation
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Market analysis
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Social Media Strategy
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Paid social
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Consulting
            </p>
          </div>
        </li>
        <li
          class="jsx-1740087617"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1740087617 fontL"
          >
            Digital
          </p>
          <div
            class="jsx-1740087617 backface"
          >
            <p
              class="jsx-1740087617 fontXS"
            >
              - Paid search campaigns (google ads)
            </p>
            <p
              class="jsx-1740087617 fontXS"
            >
              - Opinion platforms management
            </p>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<ServicesBlock /> renders properly on mobile 1`] = `
<div>
  <section
    class="jsx-1740087617 container"
    data-testid="servicesBlock_section"
  >
    <div
      class="jsx-1740087617 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Serviços
      </h1>
      <div
        class="jsx-443661925 nukaCarouselContainer"
      >
        <div
          class="slider-container"
          style="position: relative;"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
            tabindex="-1"
          >
            Slide 1 of 3
          </div>
          <div
            style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerleft"
              style="pointer-events: auto;"
            >
              <button
                aria-label="previous slide"
                class="jsx-443661925 previousButton"
                data-testid="nukaCarousel_previousSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerright"
              style="pointer-events: auto;"
            >
              <button
                aria-label="next slide"
                class="jsx-443661925 nextButton"
                data-testid="nukaCarousel_nextSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            aria-label="carousel-slider"
            class="slider-frame"
            role="region"
            style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
            tabindex="0"
          >
            <div
              class="slider-list"
              style="width: 900%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
            >
              <div
                class="slide slide-current prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Design
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Web design
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartazes & flyers
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartão de contacto
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Templates para Social Media
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Menus
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Social Media
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Análises de mercado
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Estratégia e gestão de redes sociais
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Promoção de posts
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Consultoria
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Digital
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Campanhas paid search (google ads)
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Gestão de plataformas de opinião
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Design
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Web design
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartazes & flyers
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartão de contacto
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Templates para Social Media
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Menus
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Social Media
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Análises de mercado
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Estratégia e gestão de redes sociais
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Promoção de posts
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Consultoria
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Digital
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Campanhas paid search (google ads)
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Gestão de plataformas de opinião
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Design
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Web design
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartazes & flyers
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartão de contacto
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Templates para Social Media
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Menus
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Social Media
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Análises de mercado
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Estratégia e gestão de redes sociais
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Promoção de posts
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Consultoria
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Digital
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Campanhas paid search (google ads)
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Gestão de plataformas de opinião
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ServicesBlock /> renders properly on tablet 1`] = `
<div>
  <section
    class="jsx-1740087617 container"
    data-testid="servicesBlock_section"
  >
    <div
      class="jsx-1740087617 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Serviços
      </h1>
      <div
        class="jsx-3311130813 nukaCarouselContainer"
      >
        <div
          class="slider-container"
          style="position: relative;"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
            tabindex="-1"
          >
            Slide 1 of 3
          </div>
          <div
            style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerleft"
              style="pointer-events: auto;"
            >
              <button
                aria-label="previous slide"
                class="jsx-3311130813 previousButton"
                data-testid="nukaCarousel_previousSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerright"
              style="pointer-events: auto;"
            >
              <button
                aria-label="next slide"
                class="jsx-3311130813 nextButton"
                data-testid="nukaCarousel_nextSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            aria-label="carousel-slider"
            class="slider-frame"
            role="region"
            style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
            tabindex="0"
          >
            <div
              class="slider-list"
              style="width: 900%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
            >
              <div
                class="slide slide-current prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Design
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Web design
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartazes & flyers
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartão de contacto
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Templates para Social Media
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Menus
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Social Media
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Análises de mercado
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Estratégia e gestão de redes sociais
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Promoção de posts
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Consultoria
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Digital
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Campanhas paid search (google ads)
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Gestão de plataformas de opinião
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Design
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Web design
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartazes & flyers
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartão de contacto
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Templates para Social Media
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Menus
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Social Media
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Análises de mercado
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Estratégia e gestão de redes sociais
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Promoção de posts
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Consultoria
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Digital
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Campanhas paid search (google ads)
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Gestão de plataformas de opinião
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Design
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Web design
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartazes & flyers
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Cartão de contacto
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Templates para Social Media
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Menus
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Social Media
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Análises de mercado
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Estratégia e gestão de redes sociais
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Promoção de posts
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Consultoria
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-1740087617 carouselItem"
                  data-testid="servicesBlock_blockCarousel"
                >
                  <p
                    class="jsx-1740087617 fontL"
                  >
                    Digital
                  </p>
                  <div
                    class="jsx-1740087617 backface"
                  >
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Campanhas paid search (google ads)
                    </p>
                    <p
                      class="jsx-1740087617 fontXS"
                    >
                      - Gestão de plataformas de opinião
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
